# DataConnectorMeiro

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/: api.py  record.py  show_ads_api_wrapper.py  wsgi.py
src/data_connector/: __init__.py  api.py  commands.py  record.py  show_ads_api_wrapper.py  utils.py
tests/: conftest.py  test_api.py  test_app.py  test_record.py  test_show_ads_api_wrapper.py  test_utils.py
tests/resources/: test_data.csv
